Label: Change default color for label

--- a/app/views/project/partial_issuelabels_editlabel.scala.html
+++ b/app/views/project/partial_issuelabels_editlabel.scala.html
@@ -33,18 +33,18 @@
       <input type="text" name="name" class="text input-label-name" placeholder="@Messages("label.name")">
 
       <div class="label-preset-colors edit">
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#da5454;"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#f86ca0"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#ff9e9d"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#f8c86c"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#ffcc33"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#ff9933"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#99ca3c"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#3fb8af"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#22b4b9"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#6ca6f8"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#4d68b1"></button>
-        <button type="button" class="issue-label btn-preset-color" style="background-color:#9966cc"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#FF7770;"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#F18CA7"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#FFB399"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#F1D55C"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#A5D870"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#32CDA1"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#9985D8"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#40A0EB"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#6BC4E9"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#DCBD98"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#8C8C9C"></button>
+        <button type="button" class="issue-label btn-preset-color" style="background-color:#7A9CB4"></button>
         <input type="text" name="color" class="input-small input-label-color" placeholder="@Messages("label.customColor")">
       </div>
     </div>
