--- a/app/views/issue/partial_select_label.scala.html
+++ b/app/views/issue/partial_select_label.scala.html
@@ -27,7 +27,7 @@
   </dt>
   <dd>
     <select name="labelIds" multiple="multiple" data-search="labelIds"
-            data-toggle="select2" data-format="issuelabel" data-allow-clear="true" data-close-on-select="false"
+            data-toggle="select2" data-format="issuelabel" data-allow-clear="true" data-close-on-select="true"
             data-dropdown-css-class="issue-labels" data-container-css-class="issue-labels bordered fullsize"
             data-placeholder="@Messages("label.select")">
       <option></option>
