Issue: Fix problem .issue-info shrinks on affixed

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3090,7 +3090,7 @@ div.markdown-preview {
 
 .issue-info {
     padding:15px 0 0 52px;
-    &.affix { top: 0; }
+    &.affix { top: 0; width:219px; }
 
     dl {
         margin-bottom:20px;
