ui.Select2: fix .branche-label styles for other branch types

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -339,3 +339,7 @@ li.select2-result-with-children:first-of-type {
 .pika-table abbr[title] {
     cursor: default;
 }
+
+.select2-chosen .branch-label {
+    margin-top:-2px;
+}
