`Due Date Message` will be changed when `Due date` is changed.
Cause:
Although `Due date` is changed, `Due Date Message` is not changed.

Solutions:
When `Due date` is changed, a server returns `isOverDue` and `DueDateMsg` values as JSON. In `yobi.Issue.View.js` these values are used and shown properly.

Private-issue: 1779

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -257,15 +257,15 @@
                         <dl>
                             <dt>
                                 @Messages("issue.dueDate")
+                                <span class="duedate-status @if(issue.isOverDueDate) {overdue}">
                                 @if(issue.dueDate != null) {
-                                <span class="@if(issue.isOverDueDate) {overdue}">
                                     @if(issue.isOverDueDate) {
                                         (@Messages("issue.dueDate.overdue"))
                                     } else {
                                         (@issue.until)
                                     }
-                                </span>
                                 }
+                                </span>
                             </dt>
                             <dd>
                                 @if(isAllowed(UserApp.currentUser(), issue.asResource(), Operation.UPDATE)) {
