CodeCommentBlock: fix find selected line on IE11
As IE11 assumes a text node is not an element,
`.parentElement` is undefined for text nodes on IE11.
and so using `.parentNode` is good alternative.

see https://connect.microsoft.com/IE/feedback/details/786279/node-parentelement-incorrectly-returns-null

This commit includes trivial HTML markup and JS convention fixes.

--- a/app/views/partial_filediff.scala.html
+++ b/app/views/partial_filediff.scala.html
@@ -145,7 +145,7 @@
           </div>
           <div class="diff-partial-commit-id">
             @if(diff.commitB != null && diff.pathB != null){
-            <a href="@routes.CodeApp.codeBrowserWithBranch(projectB.owner, projectB.name, diff.commitB, diff.pathB)" title="@diff.commitB" target="_blank">@getShortenedCommitId(diff.commitB)</a></td>
+            <a href="@routes.CodeApp.codeBrowserWithBranch(projectB.owner, projectB.name, diff.commitB, diff.pathB)" title="@diff.commitB" target="_blank">@getShortenedCommitId(diff.commitB)</a>
             } else {
             &nbsp;
             }
