--- a/app/views/common/issueLabelColor.scala.html
+++ b/app/views/common/issueLabelColor.scala.html
@@ -41,11 +41,15 @@
                                     (paramColor.substring(3) * 2)
                                 else paramColor
 
-        scala.collection.Map(
-            "R" -> Integer.parseInt(baseColor.substring(1, 3), 16),
-            "G" -> Integer.parseInt(baseColor.substring(3, 5), 16),
-            "B" -> Integer.parseInt(baseColor.substring(5, 7), 16)
-        )
+        if(baseColor.length == 7){
+            scala.collection.Map(
+                "R" -> Integer.parseInt(baseColor.substring(1, 3), 16),
+                "G" -> Integer.parseInt(baseColor.substring(3, 5), 16),
+                "B" -> Integer.parseInt(baseColor.substring(5, 7), 16)
+            )
+        } else {
+            getDefaultRGB
+        }
     }
 
     def getDefaultRGB: Map[String,Int] = {
