IssueLabel: don't close dropdown on select at create/edit issue form

--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -157,7 +157,7 @@
                         </dd>
                     </dl>
 
-                    @partial_select_label(IssueLabel.findByProject(project), issue.getLabelIds, "issue-option")
+                    @partial_select_label(IssueLabel.findByProject(project), issue.getLabelIds, "issue-option", "data-close-on-select=false")
                 </div>
             </div>
         </div>
