--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -119,7 +119,7 @@
                         </dd>
                     </dl>
 
-                    @partial_select_label(IssueLabel.findByProject(project), null, "issue-option")
+                    @partial_select_label(IssueLabel.findByProject(project), null, "issue-option", "data-close-on-select=false")
                 </div>
             </div>
         </div>
