--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -20,84 +20,87 @@
 **@
 @(title:String, form:Form[Posting], posting:Posting, number:Long,  project:Project, isAllowedToNotice:Boolean)
 
-@import scala.collection.Map
+@import utils.AccessControl._
 @import utils.TemplateHelper._
+@import utils.HtmlUtil._
 @import models.enumeration.ResourceType
 @implicitField = @{ helper.FieldConstructor(simpleForm) }
-@import utils.HtmlUtil._
 
 @projectLayout(title, project, utils.MenuType.BOARD) {
 @projectMenu(project, utils.MenuType.BOARD, "main-menu-only")
 <div class="page-wrap-outer">
-    <div class="project-page-wrap">
-    	<form action="@routes.BoardApp.editPost(project.owner, project.name, number)" method="post" enctype="multipart/form-data" class="nm">
-    	<div class="content-wrap frm-wrap">
-    		<dl>
-    			<dt>
-    				<label for="title">@Messages("title")</label>
-    			</dt>
-    			<dd>
-    				@defining(form.errors().get("title")) { errors =>
-    				<input type="text" id="title" name="title" value="@posting.title" class="zen-mode text title @if(errors != null) {error}" maxlength="250" tabindex="1" />
-    					@if(errors != null) {
-    						<div class="message">
-    						@for(error <- errors) {
-    							<div>@Messages(error.message)</div>
-    						}
-    						</div>
-    					}
-    				}
-    			</dd>
-
-    		    <dd style="position: relative;">
-                    @common.editor("body", posting.body, "tabindex=2", "content-body")
-    			</dd>
-
-    			@if(isAllowedToNotice){
-    			@helper.input(form("notice")){(id, name, value, args) =>
-    			<dd class="right-txt">
-    				<input type="checkbox" id="notice" name="notice" class="checkbox" @toHtmlArgs(args) @(if(value.equals(Some("true"))) "checked" else "")/><!--
-    			 --><label for="notice" class="label-public">@Messages("post.notice.label")</label>
-                @if(project.isGit){
-                    <input type="checkbox" id="readme" name="readme" class="checkbox" @boolToCheckedString(posting.readme)/>
-                    <label for="readme" class="label-public">@Messages("post.readmefy")</label>
+  <div class="project-page-wrap">
+    <form action="@routes.BoardApp.editPost(project.owner, project.name, number)" method="post" enctype="multipart/form-data" class="nm">
+      <div class="content-wrap frm-wrap">
+        <dl>
+          <dt>
+            <label for="title">@Messages("title")</label>
+          </dt>
+          <dd>
+            @defining(form.errors().get("title")) { errors =>
+            <input type="text" id="title" name="title" value="@posting.title" class="zen-mode text title @if(errors != null) {error}" maxlength="250" tabindex="1" />
+              @if(errors != null) {
+                <div class="message">
+                @for(error <- errors) {
+                  <div>@Messages(error.message)</div>
                 }
-    			</dd>
-    			}
-    			}
-    		</dl>
-
-            @** fileUploader **@
-            @if(!UserApp.currentUser.isAnonymous) {
-                @common.fileUploader(ResourceType.BOARD_POST, posting.id)
+                </div>
+              }
             }
-            @** end of fileUploader **@
+          </dd>
+          <dd style="position: relative;">
+            @common.editor("body", posting.body, "tabindex=2", "content-body")
+          </dd>
+        </dl>
 
-    		<div class="actions">
-    			<button class="ybtn ybtn-info" tabindex="3">@Messages("button.save")</button><!--
-    		 --><a href="javascript:history.back();" class="ybtn" tabindex="4">@Messages("button.cancel")</a>
-    		</div>
+        @** fileUploader **@
+        @if(!UserApp.currentUser.isAnonymous) {
+            @common.fileUploader(ResourceType.BOARD_POST, posting.id)
+        }
+        @** end of fileUploader **@
 
-    	</div>
-    	</form>
-    </div>
+        <div class="right-txt mt10 mb10">
+          @if(isAllowedToNotice && !stringToBoolean(request().getQueryString("readme"))){
+            @helper.input(form("notice")){(id, name, value, args) =>
+            <label class="checkbox">
+              <input type="checkbox" id="notice" name="notice" @toHtmlArgs(args) @(if(value.equals(Some("true"))) "checked" else "")/>
+              @Messages("post.notice.label")
+            </label>
+            }
+          }
+
+          @if(project.isGit && isProjectResourceCreatable(UserApp.currentUser(), project, ResourceType.COMMIT)){
+            <label class="checkbox">
+              <input type="checkbox" id="readme" name="readme" @boolToCheckedString(posting.readme)/>
+              @Messages("post.readmefy")
+            </label>
+          }
+        </div>
+
+        <div class="actions">
+          <button class="ybtn ybtn-info" tabindex="3">@Messages("button.save")</button><!--
+         --><a href="javascript:history.back();" class="ybtn" tabindex="4">@Messages("button.cancel")</a>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
+
 @common.markdown(project)
 
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-	$yobi.loadModule("board.Write", {
-		"sMode"			 : "edit",
-		"elTextarea"	 : 'textarea[data-editor-mode="content-body"]',
-		"sUploaderAction": "@routes.AttachmentApp.uploadFile"
-	});
+$(function(){
+    $yobi.loadModule("board.Write", {
+        "sMode"     : "edit",
+        "elTextarea": 'textarea[data-editor-mode="content-body"]'
+    });
 
     yobi.Mention({
-        target:'textarea[id^=editor-]',
-        url : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, posting.getNumber, posting.asResource().getType().resource()).toString())"
+        "target": 'textarea[id^=editor-]',
+        "url"   : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, posting.getNumber, posting.asResource().getType().resource()).toString())"
     });
 });
 </script>
