--- a/app/views/issue/partial_assignee.scala.html
+++ b/app/views/issue/partial_assignee.scala.html
@@ -26,6 +26,7 @@
     <option value="@user.id"
             data-avatar-url="@User.findByLoginId(user.loginId).avatarUrl"
             data-login-id="@user.loginId"
+            @if(!project.isAssignableUser(user)) { data-non-member="true" }
             @flag>
         @user.name
     </option>
@@ -45,7 +46,7 @@
             }
         }
     }
-    @for(user <- project.getAssignableUsers){
+    @for(user <- project.getAssignableUsersAndAssignee(issue)){
         @if(issue != null && issue.assignee != null && issue.assignee.user.loginId == user.loginId) {
             @makeOptionTagWithFlag(user, "selected")
         } else {
