--- a/app/views/common/notificationMail.scala.html
+++ b/app/views/common/notificationMail.scala.html
@@ -20,9 +20,7 @@
 **@
 @(userLanguage:Lang, message:String, urlToView:String = null, resource:models.resource.Resource)
 
-@getFooterLinkHTML(link:String, anchorText:String) = {
-  <a href="@link" target="_blank" style="color:#4399e2; text-decoration:underline;">@anchorText</a>
-}
+@getFooterLinkHTML(link:String, anchorText:String) = {<a href="@link" target="_blank" style="color:#4399e2; text-decoration:underline;">@anchorText</a>}
 
 <div style="font-family:'Helvetica Neue','Helvetica','Arial','나눔고딕','NanumGothic','NanumGothicOTF','Apple SD Gothic Neo','맑은 고딕',sans-serif;">
   @Html(message)
@@ -36,13 +34,4 @@
 </a>
 }
 
-<div style="max-width:410px;margin-top:20px;color:#989898;text-align:justify;word-break:break-all;font-size:11px;font-family:'Helvetica Neue','Helvetica','Arial','나눔고딕','NanumGothic','NanumGothicOTF','Apple SD Gothic Neo','맑은 고딕',sans-serif;">
-  @Html(Messages("notification.off.unwatch",
-                  getFooterLinkHTML(routes.WatchApp.unwatch(resource.asParameter).toString,
-                                    Messages("notification.unwatch")(userLanguage))
-                )(userLanguage))<br>
-  @Html(Messages("notification.off.settings",
-                 getFooterLinkHTML(routes.UserApp.editUserInfoByTabForm("notifications").toString,
-                                   Messages("userinfo.changeNotifications")(userLanguage))
-                )(userLanguage))
-</div>
+<div style="max-width:410px;margin-top:20px;color:#989898;text-align:justify;word-break:break-all;font-size:11px;font-family:'Helvetica Neue','Helvetica','Arial','나눔고딕','NanumGothic','NanumGothicOTF','Apple SD Gothic Neo','맑은 고딕',sans-serif;">@Html(Messages("notification.off.unwatch", getFooterLinkHTML(routes.WatchApp.unwatch(resource.asParameter).toString, Messages("notification.unwatch")(userLanguage)))(userLanguage))<br>@Html(Messages("notification.off.settings", getFooterLinkHTML(routes.UserApp.editUserInfoByTabForm("notifications").toString, Messages("userinfo.changeNotifications")(userLanguage)))(userLanguage))</div>
