Diagnostic: Introduce the Diagnostic
Site Administrator can see the list of problems of Yobi in Site
Management > Diagnostics. I believe this way is much better than finding
an error log among the tons of log entries.

When a site administrator tries to see the list, the Diagnostic runs
every diagnostic item added by Yobi developers. The developers can add
their own diagnostic item by using Diagnostic.register method.

--- a/app/views/site/siteMngLayout.scala.html
+++ b/app/views/site/siteMngLayout.scala.html
@@ -64,6 +64,9 @@
                         @if(YobiUpdate.versionToUpdate != null) { <span class="notification-badge">1</span> }
                         </a>
                     </li>
+                    <li class="@isActiveMenu(routes.SiteApp.diagnose())">
+                        <a href="@routes.SiteApp.diagnose()">@Messages("site.sidebar.diagnostics")</a>
+                    </li>
                 </ul>
             </div>
             <div class="span10">
