disable spinner UI of page navigation in Firefox

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -96,6 +96,7 @@ input[type=number]::-webkit-outer-spin-button {
                 }
             }
             &.delimiter { color:#ddd; padding:0 5px; }
+            .nospinner { -moz-appearance:textfield; }
         }
     }
 }
