Label: Limit max length to avoid column size exceed

--- a/app/views/project/issuelabels.scala.html
+++ b/app/views/project/issuelabels.scala.html
@@ -34,8 +34,8 @@
         <strong class="form-legend">@Messages("label.new")</strong>
         <div class="form-wrap">
           <div>
-            <input type="text" name="category" class="input-label mr5" data-provider="typeahead" autocomplete="off" placeholder="@Messages("label.category")">
-            <input type="text" name="name" class="input-label" autocomplete="off" placeholder="@Messages("label.name")">
+            <input type="text" name="category" class="input-label mr5" maxlength="250" data-provider="typeahead" autocomplete="off" placeholder="@Messages("label.category")">
+            <input type="text" name="name" class="input-label" maxlength="250" autocomplete="off" placeholder="@Messages("label.name")">
           </div>
           <div class="label-preset-colors">
             <button type="button" class="issue-label btn-preset-color" style="background-color:#FF7770;"></button>
