--- a/app/views/project/partial_issuelabels_editlabel.scala.html
+++ b/app/views/project/partial_issuelabels_editlabel.scala.html
@@ -30,7 +30,7 @@
         }
       </select>
 
-      <input type="text" name="name" class="text input-label-name" placeholder="@Messages("label.name")">
+      <input type="text" name="name" class="text input-label-name" maxlength="250" placeholder="@Messages("label.name")">
 
       <div class="label-preset-colors edit">
         <button type="button" class="issue-label btn-preset-color" style="background-color:#FF7770;"></button>
